syntax = "proto3";
package chat;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "proto/chatpb;chatpb";

service ChatService {

  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);

  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse);
  rpc CloseRoom(CloseRoomRequest) returns (google.protobuf.Empty);

  rpc JoinRoom(JoinRoomRequest) returns (google.protobuf.Empty);
  rpc LeaveRoom(LeaveRoomRequest) returns (google.protobuf.Empty);

  rpc SendMessage(ChatMessage) returns (google.protobuf.Empty);
  rpc ReceiveMessage(ReceiveMessagesRequest) returns (ChatMessage);

  rpc InviteUser(Invitation) returns (google.protobuf.Empty);
  rpc ReceiveInvitation(google.protobuf.Empty) returns (Invitation);
  rpc ReactToInvitation(InvitationReaction) returns (google.protobuf.Empty);
  rpc ReceiveInvitationReaction(google.protobuf.Empty) returns (InvitationReaction);

  rpc AckEvent(AckRequest) returns (google.protobuf.Empty);

}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  string token = 1;
  string userID = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string userID = 2;
}

message CreateRoomRequest {
  string algorithm = 1; // "RC5, RC6"
  string mode = 2;      // "ECB", "CBC", "CFB", "OFB", "CTR", "RandomDelta"
  string padding = 3;   // "Zeros", "ANSIX923", "PKCS7", "ISO10126"
  string prime = 4;     // DH-простое в hex
  string iv = 5;
  string randomDelta = 6;
  string room_name = 7;
}

message CreateRoomResponse {
  string room_id = 1;
}

message CloseRoomRequest {
  string room_id = 1;
}

message JoinRoomRequest {
  string room_id = 1;
}

message LeaveRoomRequest {
  string room_id = 1;
}

message Invitation {
  string sender_name = 1;
  string receiver_name = 2;
  string room_id = 3;
  string prime = 4;         // p в hex
  string g = 5;             // g как строка (int -> string)
  string public_key = 6;    // A = g^a mod p в hex
  string room_name = 7;
  string algorithm = 8;
  string mode = 9;
  string padding = 10;
  string iv = 11;
  string randomDelta = 12;
  string message_id = 13;
}

message InvitationReaction {
  string sender_name = 1;
  string receiver_name = 2;
  string room_id = 3;
  string public_key = 4;
  bool accepted = 5;
  string message_id = 6;
}

message AckRequest {
  string message_id = 1;
}

message ChatMessage {
  string message_id = 1;
  string sender_id = 2;
  string sender_name = 3;
  string receiver_id = 4;
  string receiver_name = 5;
  string chat_id = 6;
  google.protobuf.Timestamp timestamp = 7;

  oneof payload {
    TextPayload text = 8;
//    FileHeader file = 9;
    FileChunk chunk = 9;
  }
}
message ReceiveMessagesRequest {
  string user_id = 1;
  string chat_id = 2;
}

message TextPayload {
  string content = 1; // до 256 байт
}

/*
message FileHeader {
  string file_id = 1;
  string filename = 2;
  int32 total_chunks = 3;
}
*/

message FileChunk {
  string file_id = 1;
  string filename = 2;
  int32 chunk_index = 3;
  int32 total_chunks = 4;
  bytes chunk_data = 5;
}